2008-02-28  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.6
	  ----------------------

2008-02-28  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: bumped up version to 0.9.6
	* NEWS: What's new in 0.9.6

2008-02-27  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1: Updated help and man page.
	* S3/S3.py, S3/Utils.py, s3cmd: Support for 's3cmd info' command.
	* s3cmd: Fix crash when 'sync'ing files with unresolvable owner uid/gid.
	* S3/S3.py, S3/Utils.py: open files in binary mode (otherwise windows
	  users have problems).
	* S3/S3.py: modify 'x-amz-date' format (problems reported on MacOS X). 
	  Thanks Jon Larkowski for fix.

2008-02-27  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated wishlist.

2008-02-11  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Properly follow RedirectPermanent responses for EU buckets
	* S3/S3.py: Create public buckets with -P (#1837328)
	* S3/S3.py, s3cmd: Correctly display public URL on uploads.
	* S3/S3.py, S3/Config.py: Support for MIME types. Both 
	default and guessing. Fixes bug #1872192 (Thanks Martin Herr)

2007-11-13  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.5
	  ----------------------

2007-11-13  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Support for buckets stored in Europe, access now 
	  goes via <bucket>.s3.amazonaws.com where possible.

2007-11-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Support for storing file attributes (like ownership, 
	  mode, etc) in sync operation.
	* s3cmd, S3/S3.py: New command 'ib' to get information about 
	  bucket (only 'LocationConstraint' supported for now).

2007-10-01  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Fix typo in argument name (patch
	  from Kim-Minh KAPLAN, SF #1804808)

2007-09-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Exit with error code on error (patch
	  from Kim-Minh KAPLAN, SF #1800583)

2007-09-25  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Don't fail if bucket listing doesn't have
	  <IsTruncated> node.